# cjlu_final_project

./: .gitignore  APP_Plan.md  __init__.py  app_window.py  constants.py  inference.py  main.py  main_window.ui  media_source.py  model_registry.py  overlay.py  preprocess.py  pyproject.toml  requirements.txt  settings.py
